# bioinformatik1

./: .clang-format  2Bit.cpp  2Bit.h  Alignment.cpp  Alignment.h  Assembler.cpp  Assembler.h  BayesAlgorithm.cpp  BayesFile.cpp  BayesMain.cpp  Block.cpp  Block.h  CMakeLists.txt  Classifics.cpp  Classifics.h  Coin.h  DNA.cpp  Distance.h  EditDistance.h  Examples.cpp  Examples.h  Format.h  Graph.h  Gurobi.h  InvalidCharacter.cpp  InvalidCharacter.h  Markov.cpp  Markov.h  Matrix.h  Model.cpp  Model.h  NaiveBayes.h  ParsingException.cpp  README.md  RNA.h  SequenceCombinator.h  SingleSNP.cpp  SingleSNP.h  Snipper.h  SnipperAlgorithm.cpp  (+31 more)
SNPFileGenerator/: SNPgen.cpp  SNPgen.h
console/: Format.cpp  Format.h  Style.cpp  Style.h  console.cpp  console.h
fragments2_fasta/: greedy_000000.digraph  greedy_000001.digraph  greedy_000002.digraph  greedy_000003.digraph  greedy_000004.digraph
fragments_fasta/: greedy_000000.digraph  greedy_000001.digraph  greedy_000002.digraph  greedy_000003.digraph  greedy_000004.digraph  greedy_000005.digraph  greedy_000006.digraph  greedy_000007.digraph
matrix/: Matrix.cpp  Matrix.h
sequence/: DNA.cpp  DNA.h  Fasta.h  ParsingException.h  Peptide.cpp  Peptide.h  RNA.cpp  RNA.h  Sequence.h  SequenceCombinator.h
snipper/: SingleSNP.cpp  SingleSNP.h  Snipper.h  SnipperFile.cpp  SnipperMain.cpp  States.h  TestSNP.cpp  TestSNP.h
test/: Align_test.cpp  Assembler_UB3_test.cpp  Assembler_test.cpp  Bayes_test.cpp  Build_test.cpp  CMakeLists.txt  Classifics_test.cpp  Formula_test.cpp  GraphVizOut_test.cpp  Graph_test.cpp  Gurobi_test.cpp  Markov_test.cpp  Matrix_test.cpp  SingleSNP_test.cpp  Single_test.cpp  Snipper_test.cpp  Stat_test.cpp  Test_test.cpp  Train_test.cpp  Viterbi_test.cpp  main_test.cpp  snp_test.txt
